set standards for categories & tags

--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,9 @@ author:
   email: jie.cheng@Aliyun.com
   github: jiec827
   linkedin: in/jie-cheng-1659a8117
-  weibo: jiec827?is_all=1
   jianshu: users/ac456d638b07/latest_articles
+  wechat: QR_code
+  weibo: jiec827?is_all=1
   pinterest: jie_cheng/
   bio: Tell stories & Share ideas
   email_md5: jie.cheng@Aliyun.com
